# scoped

./: .gitignore  LICENSE  README.md  pyproject.toml
scoped/: __init__.py  scope.py  utils.py
tests/: test_scoped.py
